# culprit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
culprit/: __init__.py  _proc.py  bisect.py  blast_radius.py  classify.py  cli.py  completeness.py  config.py  coupling.py  coverage.py  evolution.py  htmlreport.py  intent.py  lifecycle.py  mcp_server.py  owners.py  pr_context.py  reasoning.py  report.py  risk.py  serve.py  suspect.py  testimpact.py  trace.py  verify_fix.py
culprit/templates/: report.html
docs/: ARCHITECTURE.md
examples/claude-code-skill/: SKILL.md
examples/github-actions/: culprit-pr.yml
tests/: conftest.py  githelper.py  test_bisect.py  test_blast_radius.py  test_classify.py  test_completeness.py  test_config.py  test_coupling.py  test_coverage.py  test_evolution.py  test_htmlreport.py  test_intent.py  test_lifecycle.py  test_mcp_server.py  test_multihost.py  test_owners.py  test_pipeline.py  test_report.py  test_risk.py  test_self_suspect.py  test_serve.py  test_suspect_parse.py  test_testimpact.py  test_trace.py  test_verify_fix.py
